fix dark mode for control bar, refactor code a bit

--- a/src/main/resources/controller/container_dark.css
+++ b/src/main/resources/controller/container_dark.css
@@ -3,16 +3,14 @@
     -fx-background-color: #2f4f4f;
 }
 
-.button: {
-    -fx-background-color: #2f4f4f;
-}
-
 .controlBar:hover {
-    -fx-scale-x: 1.2;
-    -fx-scale-y: 1.2;
-    -fx-scale-z: 1.2;
+    -fx-background-color:  #3F5EFB;
 }
 
+.button:pressed {
+    -fx-scale-y: 0.9;
+    -fx-scale-x: 0.9;
+}
 .menu-label {
     -fx-background-color: #30cccc;
     -fx-background-radius: 7;
